<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="CINEMATES2020"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplicationcinemates1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplicationcinemates1.ui.preferiti.PreferitiFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_preferiti" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplicationcinemates1.ui.davedere.DavedereFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_davedere" />
    <fragment
        android:id="@+id/nav_personal"
        android:name="com.example.myapplicationcinemates1.ui.personale.PersonalFragment"
        android:label="@string/menu_personal"
        tools:layout="@layout/fragment_personale" />
    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.myapplicationcinemates1.ui.richieste.RicezioneFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/ricezione_item" />
    <fragment
        android:id="@+id/nav_friendsfeed"
        android:name="com.example.myapplicationcinemates1.ui.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.myapplicationcinemates1.ui.home.LogoutFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" />

</navigation>